<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutDefault"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.view.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvLoginCard"
                style="@style/LoginCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    style="@style/LoginCardBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilLoginEmail"
                        style="@style/TextInputLayoutDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietLoginEmail"
                            style="@style/EditTextDefault"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilLoginPassword"
                        style="@style/TextInputLayoutDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietLoginPassword"
                            style="@style/EditTextDefault"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/cbLoginRemember"
                        style="@style/CheckboxDefault"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/remember" />

                    <Button
                        android:id="@+id/btLoginLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_default"
                        android:text="@string/log_in" />

                    <Button
                        android:id="@+id/btLoginCreate"
                        style="@style/TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>