<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutDefault"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".games.view.GamesRegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/LayoutDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ibGamesRegisterBack"
            style="@style/ButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvGamesRegisterCard"
            style="@style/GamesRegisterCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                style="@style/GamesRegisterCardBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilGamesRegisterName"
                    style="@style/TextInputLayoutDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietGamesRegisterName"
                        style="@style/EditTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilGamesRegisterCreatedAt"
                    style="@style/TextInputLayoutDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/created_at">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietGamesRegisterCreatedAt"
                        style="@style/EditTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="4" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilGamesRegisterDescription"
                    style="@style/TextInputLayoutDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietGamesRegisterDescription"
                        style="@style/EditTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minHeight="@dimen/games_register_multiline_min_height" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btGamesRegisterSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default_quarter"
                    android:layout_marginBottom="@dimen/margin_quarter"
                    android:text="@string/save_game" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ibGamesRegisterImage"
            style="@style/GamesRegisterImage"
            android:layout_width="@dimen/games_register_image_size"
            android:layout_height="@dimen/games_register_image_size"
            android:contentDescription="@string/create_account"
            app:layout_constraintBottom_toTopOf="@id/mcvGamesRegisterCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/mcvGamesRegisterCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>