<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".games.view.GamesDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivGameDetailsImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/game_image"
            android:minHeight="@dimen/games_details_image_min_height"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/bg_placeholder" />

        <TextView
            android:id="@+id/tvGameDetailsImageName"
            style="@style/GameDetailsImageName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/ivGameDetailsImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivGameDetailsImage"
            app:layout_constraintVertical_bias="1"
            tools:text="Game Name" />

        <Button
            android:id="@+id/btGamesDetailsBack"
            style="@style/ButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btGamesDetailsEdit"
            style="@style/GameDetailsEditButton"
            android:layout_width="@dimen/games_details_edit_btn_size"
            android:layout_height="@dimen/games_details_edit_btn_size"
            app:layout_constraintBottom_toBottomOf="@id/ivGameDetailsImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivGameDetailsImage" />

        <TextView
            android:id="@+id/tvGameDetailsName"
            style="@style/GameDetailsName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivGameDetailsImage"
            tools:text="Game Name" />

        <TextView
            android:id="@+id/tvGameDetailsYearLabel"
            style="@style/GameDetailsYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release"
            app:layout_constraintEnd_toStartOf="@id/tvGameDetailsYear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGameDetailsName" />

        <TextView
            android:id="@+id/tvGameDetailsYear"
            style="@style/GameDetailsYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            app:layout_constraintStart_toEndOf="@id/tvGameDetailsYearLabel"
            app:layout_constraintTop_toTopOf="@id/tvGameDetailsYearLabel"
            tools:text="2021" />

        <TextView
            android:id="@+id/tvGameDetailsDescription"
            style="@style/GameDetailsDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGameDetailsYearLabel"
            tools:text="Game Description" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>